# Arquitectura_software_ROS2

./: README.md
avoid_obstacle/: README.md
avoid_obstacle/avoid_cerodumped_cpp/: CMakeLists.txt  package.xml
avoid_obstacle/avoid_cerodumped_cpp/include/avoid_cerodumped_cpp/: AvoidNode.hpp
avoid_obstacle/avoid_cerodumped_cpp/launch/: avoid_cerodumped.launch.py
avoid_obstacle/avoid_cerodumped_cpp/src/: avoid_main.cpp
avoid_obstacle/avoid_cerodumped_cpp/src/avoid_cerodumped_cpp/: AvoidNode.cpp
n_garciam_2021_asr/: CMakeLists.txt  package.xml
n_garciam_2021_asr/include/n_garciam_2021_asr/: vel_from_laser.hpp
n_garciam_2021_asr/launch/: launch.py  vel_from_laser_launch.py
n_garciam_2021_asr/src/: vel_from_laser_main.cpp
n_garciam_2021_asr/src/n_garciam_2021_asr/: vel_from_laser.cpp
recepcionist-cero-dumped/: CMakeLists.txt  README.md  package.xml
recepcionist-cero-dumped/behavior_tree_xml/: move.xml  recepcionist.xml
recepcionist-cero-dumped/include/recepcionist/: ButtonNode.hpp  DetectedPersonNode.hpp  DialogBarman.hpp  DialogDrink.hpp  DialogName.hpp  EmptyChair.hpp  GiveDrink.hpp  Move.hpp
recepcionist-cero-dumped/include/recepcionist/ctrl_support/: BTLifecycleCtrlNode.hpp
recepcionist-cero-dumped/launch/: patrolling.launch.py
recepcionist-cero-dumped/src/: bt_recepcionist_main.cpp  patrolling_main.cpp
recepcionist-cero-dumped/src/recepcionist/: ButtonNode.cpp  DetectedPersonNode.cpp  DialogBarman.cpp  DialogDrink.cpp  DialogName.cpp  EmptyChair.cpp  GiveDrink.cpp  Move.cpp
seekandcapture-cero_dumped/: BehaviourTree.xml  CMakeLists.txt  README.md  package.xml
seekandcapture-cero_dumped/behavior_tree_xml/: BehaviourTree.xml
seekandcapture-cero_dumped/cmake/: FindZMQ.cmake
seekandcapture-cero_dumped/include/seekandcapture/: AvoidPersonNode.hpp  DarknetDetectionNode.hpp  DetectedPersonNode.hpp  DetectionTo3DfromDepthNode.hpp  PIDController.hpp  PursuePersonNode.hpp  TfDetectionNode.hpp
seekandcapture-cero_dumped/include/seekandcapture/ctrl_support/: BTActionNode.hpp
seekandcapture-cero_dumped/launch/: perception.launch.py
seekandcapture-cero_dumped/src/: bt_perception_main.cpp  darknet_detection_main.cpp  detection_2d_to_3d_depth_main.cpp  tf_detection_main.cpp
seekandcapture-cero_dumped/src/seekandcapture/: AvoidPersonNode.cpp  DarknetDetectionNode.cpp  DetectedPersonNode.cpp  DetectionTo3DfromDepthNode.cpp  PIDController.cpp  PursuePersonNode.cpp  TfDetectionNode.cpp
vel_pub_sub/: CMakeLists.txt  package.xml
vel_pub_sub/include/vel_pub_sub/: vel_pub.hpp  vel_sub.hpp
vel_pub_sub/launch/: vel_pub_sub_launch.py
vel_pub_sub/src/: vel_pub_main.cpp  vel_sub_main.cpp
vel_pub_sub/src/vel_pub_sub/: vel_pub.cpp  vel_sub.cpp
